# Bearpi_Hi2821_Pico_NLChat

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.py  config.in
drivers/chips/bs21/board/: CMakeLists.txt
drivers/chips/bs21/board/board_config/: CMakeLists.txt  boards.h
drivers/chips/bs21/board/linker/: CMakeLists.txt
drivers/chips/bs21/board/memory_config/: CMakeLists.txt
drivers/drivers/: CMakeLists.txt  Kconfig
drivers/drivers/driver/: CMakeLists.txt
drivers/drivers/driver/adc/: CMakeLists.txt  Kconfig
drivers/drivers/driver/cpu_trace/: CMakeLists.txt  Kconfig  cpu_trace.h
drivers/drivers/driver/dma/: CMakeLists.txt  Kconfig
drivers/drivers/driver/efuse/: CMakeLists.txt
drivers/drivers/driver/flash/: CMakeLists.txt  Kconfig
drivers/drivers/driver/gpio/: CMakeLists.txt  Kconfig
drivers/drivers/driver/i2c/: CMakeLists.txt  Kconfig
drivers/drivers/driver/i2s/: CMakeLists.txt  Kconfig
drivers/drivers/driver/ir/: CMakeLists.txt  Kconfig
drivers/drivers/driver/keyscan/: CMakeLists.txt  Kconfig
drivers/drivers/driver/lpc/: CMakeLists.txt
drivers/drivers/driver/lpc/acore/: lpc_core.h
drivers/drivers/driver/lpc/shared/: lpc.h
drivers/drivers/driver/lpm/: CMakeLists.txt  lpm_dev_ops.h
drivers/drivers/driver/memory_core/: CMakeLists.txt
drivers/drivers/driver/memory_core/shared/: memory_core.h
drivers/drivers/driver/pdm/: CMakeLists.txt  Kconfig
drivers/drivers/driver/pinmux/: CMakeLists.txt  Kconfig
drivers/drivers/driver/pm/: CMakeLists.txt  Kconfig
drivers/drivers/driver/pm/pm_clock/: CMakeLists.txt
drivers/drivers/driver/pm/pm_pmu/: CMakeLists.txt
drivers/drivers/driver/pmp/: CMakeLists.txt
drivers/drivers/driver/pwm/: CMakeLists.txt  Kconfig
drivers/drivers/driver/qdec/: CMakeLists.txt
drivers/drivers/driver/rtc_unified/: CMakeLists.txt  Kconfig
drivers/drivers/driver/security/: CMakeLists.txt
drivers/drivers/driver/security/hash/: CMakeLists.txt  Kconfig  drv_hash.h  sha256.h
drivers/drivers/driver/security/trng/: CMakeLists.txt  drv_trng.h  trng.h
drivers/drivers/driver/sfc/: CMakeLists.txt  Kconfig
drivers/drivers/driver/spi/: CMakeLists.txt  Kconfig
drivers/drivers/driver/systick/: CMakeLists.txt  Kconfig
drivers/drivers/driver/tcxo/: CMakeLists.txt  Kconfig
drivers/drivers/driver/timer/: CMakeLists.txt  Kconfig
drivers/drivers/driver/touch/: CMakeLists.txt  touch_screen_def.h  touch_screen_drv.h  touch_screen_queue1.h
drivers/drivers/driver/touch/tma525b_touch/: tma525b_ctrl.h  tma525b_drv1.h  tma525b_touch1.h
drivers/drivers/driver/touch/ztw523_touch/: ztw523_ctrl.h  ztw523_drv1.h  ztw523_touch1.h
drivers/drivers/driver/uart/: CMakeLists.txt  Kconfig
drivers/drivers/driver/ulp_aon/: CMakeLists.txt  ulp_aon_control.h
drivers/drivers/driver/usb_unified/: CMakeLists.txt  Kconfig
drivers/drivers/driver/usb_unified/adapt_liteos/: usb_os_adapt.h
drivers/drivers/driver/usb_unified/implementation/: _intr_ref.h  _printf_ref.h  _sx_ref.h  _thread_ref.h  freebsd_sys.h  freebsd_usb.h  global_implementation.h  usb_btree.h  usb_dma_cache.h  usb_list.h
drivers/drivers/driver/watchdog/: CMakeLists.txt  Kconfig
drivers/drivers/hal/: CMakeLists.txt
drivers/drivers/hal/adc/: CMakeLists.txt  Kconfig  hal_adc.h
drivers/drivers/hal/adc/v153/: hal_adc_v153.h  hal_adc_v153_regs_def.h  hal_adc_v153_regs_op.h
drivers/drivers/hal/cpu_core/: CMakeLists.txt  hal_cpu_core.h
drivers/drivers/hal/cpu_trace/: CMakeLists.txt  Kconfig  hal_cpu_trace.h
drivers/drivers/hal/dma/: CMakeLists.txt  Kconfig  hal_dma.h  hal_dma_mem.h
drivers/drivers/hal/dma/v151/: hal_dmac_v151.h  (+2 more)
drivers/drivers/hal/efuse/: CMakeLists.txt  Kconfig  hal_efuse.h
drivers/drivers/hal/gpio/: CMakeLists.txt  Kconfig  hal_gpio.h
drivers/drivers/hal/i2c/: CMakeLists.txt  Kconfig  hal_i2c.h
drivers/drivers/hal/keyscan/: CMakeLists.txt  Kconfig  hal_keyscan.h  hal_keyscan_v150.h  hal_keyscan_v150_regs_def.h  hal_keyscan_v150_regs_op.h
drivers/drivers/hal/lpc/: CMakeLists.txt  hal_lpc.h
drivers/drivers/hal/mips/: CMakeLists.txt  hal_mips.h
drivers/drivers/hal/pdm/: CMakeLists.txt  Kconfig  hal_pdm.h
drivers/drivers/hal/pinmux/: CMakeLists.txt  Kconfig
drivers/drivers/hal/pmp/: CMakeLists.txt  Kconfig  hal_pmp.h
drivers/drivers/hal/pwm/: CMakeLists.txt  Kconfig  hal_pwm.h
drivers/drivers/hal/qdec/: CMakeLists.txt  hal_qdec.h  hal_qdec_v150.h  hal_qdec_v150_regs_def.h  hal_qdec_v150_regs_op.h
drivers/drivers/hal/reboot/: CMakeLists.txt  hal_reboot.h
drivers/drivers/hal/reg_config/: CMakeLists.txt  hal_reg_config.h
drivers/drivers/hal/rtc_unified/: CMakeLists.txt  Kconfig  hal_rtc.h
drivers/drivers/hal/security/: CMakeLists.txt
drivers/drivers/hal/sfc/: CMakeLists.txt  Kconfig  hal_sfc.h  hal_sfc_v150_regs_op.h
drivers/drivers/hal/sio/: CMakeLists.txt  Kconfig  hal_sio.h
drivers/drivers/hal/spi/: CMakeLists.txt  Kconfig  hal_spi.h
drivers/drivers/hal/systick/: CMakeLists.txt  hal_systick.h
drivers/drivers/hal/tcxo/: CMakeLists.txt  hal_tcxo_v150_regs_def.h
drivers/drivers/hal/timer/: CMakeLists.txt  Kconfig  hal_drv_timer.h
drivers/drivers/hal/uart/: CMakeLists.txt  Kconfig  hal_uart.h
drivers/drivers/hal/watchdog/: CMakeLists.txt  Kconfig  hal_watchdog.h
kernel/liteos/: CMakeLists.txt  Kconfig
kernel/liteos/liteos_v208.6.0_b017/: CMakeLists.txt  Kconfig  show_menuconfig.py
kernel/liteos/liteos_v208.6.0_b017/Huawei_LiteOS/: .config
middleware/chips/bs2x/pm/: CMakeLists.txt  pm_porting.h  ulp_rtc.h
protocol/: CMakeLists.txt  Kconfig
protocol/bt/controller/: CMakeLists.txt
protocol/bt/controller/bgtp/: CMakeLists.txt  Kconfig  bs21.cmake
protocol/bt/host/: CMakeLists.txt  Kconfig  KconfigAdapter.cmake
protocol/bt/host/bg_common/: CMakeLists.txt
protocol/bt/host/bt/: CMakeLists.txt  bt_app.cmake  bt_host.cmake
protocol/bt/host/gle/: CMakeLists.txt  Kconfig  bth_gle.cmake
protocol/glp/hiex_v300/: CMakeLists.txt  bs2x.cmake
protocol/glp/hiex_v300/narrow_band/: CMakeLists.txt
protocol/nfc/: CMakeLists.txt
protocol/nfc/controller/: CMakeLists.txt  bs21.cmake
(+1740 files in other folders)
