#===============================================================================
# @brief    cmake file
# Copyright (c) @CompanyNameMagicTag 2022-2022. All rights reserved.
#===============================================================================
add_subdirectory(board_config)
add_subdirectory(linker)
add_subdirectory(memory_config)
