if (BUILD_HICFBB_GLP)
    add_subdirectory_if_exist(ie)
    add_subdirectory_if_exist(nb_payload)
    add_subdirectory_if_exist(utils)
    add_subdirectory_if_exist(msg_assemble_parse)
    add_subdirectory_if_exist(glp_services)
    add_subdirectory_if_exist(attribute)
    add_subdirectory_if_exist(cfo_conversion)
    add_subdirectory_if_exist(interface)
    add_subdirectory_if_exist(main)
    if (NOT BUILD_SIMULATOR)
        add_subdirectory_if_exist(dft)
    endif()
else()
    add_subdirectory(ie)
    add_subdirectory(nb_payload)
    add_subdirectory(utils)
    add_subdirectory(msg_assemble_parse)
    add_subdirectory(glp_services)
    add_subdirectory(attribute)
    add_subdirectory(cfo_conversion)
    add_subdirectory(interface)
    add_subdirectory(main)
    if (NOT BUILD_SIMULATOR)
    add_subdirectory(dft)
    endif()
endif()