set(MODULE_y)
list(APPEND MODULE_${LOSCFG_KERNEL_CPUP} cpup)
list(APPEND MODULE_${LOSCFG_KERNEL_DYNLOAD} dynload)
list(APPEND MODULE_${LOSCFG_KERNEL_SCATTER} scatter)
list(APPEND MODULE_${LOSCFG_KERNEL_TRACE} trace)
list(APPEND MODULE_${LOSCFG_KERNEL_PERF} perf)
list(APPEND MODULE_${LOSCFG_KERNEL_CONSOLE} console)
list(APPEND MODULE_${LOSCFG_KERNEL_LMS} lms)
list(APPEND MODULE_${LOSCFG_KERNEL_LOWPOWER} lowpower)
list(APPEND MODULE_${LOSCFG_KERNEL_CPPSUPPORT} cppsupport)
list(APPEND MODULE_${LOSCFG_KERNEL_DYNSHM} dynshm)
list(APPEND MODULE_${LOSCFG_KERNEL_RPQUEUE} rpqueue)
FOREACH(CUR_MODULE_y ${MODULE_y})
    add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/${CUR_MODULE_y})
ENDFOREACH(CUR_MODULE_y)
